--- a/Jello Simulation/JelloSim_basecode/JelloSim/JelloSim.vcxproj.filters
+++ b/Jello Simulation/JelloSim_basecode/JelloSim/JelloSim.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="world.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HairStrand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HairMesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp">
@@ -57,6 +63,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="world.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HandStrand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HandMesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
