Added hair files

--- a/Jello Simulation/JelloSim_basecode/JelloSim/JelloSim.vcxproj
+++ b/Jello Simulation/JelloSim_basecode/JelloSim/JelloSim.vcxproj
@@ -72,7 +72,6 @@
     <ClInclude Include="clock.h" />
     <ClInclude Include="fps.h" />
     <ClInclude Include="HairMesh.h" />
-    <ClInclude Include="HairStrand.h" />
     <ClInclude Include="jelloMesh.h" />
     <ClInclude Include="matrix.h" />
     <ClInclude Include="timer.h" />
@@ -82,8 +81,7 @@
   <ItemGroup>
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="fps.cpp" />
-    <ClCompile Include="HandMesh.cpp" />
-    <ClCompile Include="HandStrand.cpp" />
+    <ClCompile Include="HairMesh.cpp" />
     <ClCompile Include="jelloMesh.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="vec.cpp" />
